--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "ssh:app": "docker exec -it $(docker ps | grep docker_api | awk '{ print $1}') bash",
     "ssh:db": "docker exec -it $(docker ps | grep postgres | awk '{ print $1}') bash",
     "migrations": "sequelize db:migrate:undo:all && sequelize db:migrate",
-    "start:dev": "NODE_PATH=./server nodemon ./bin/www"
+    "start:dev": "NODE_PATH=./server nodemon ./bin/www",
+    "coverage": "`npm bin`/istanbul cover server/**/**/**.test.js",
+    "test": "NODE_PATH=./server  && node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./server/tests/*.js --recursive && cat ./coverage/lcov.info | codecov"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
+    "codecov": "^2.2.0",
+    "coveralls": "^2.13.1",
     "express": "^4.15.3",
+    "istanbul": "^0.4.5",
     "jsonwebtoken": "^7.4.1",
+    "mocha": "^3.4.2",
     "morgan": "^1.8.2",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0"
+    "sequelize-cli": "^2.7.0",
+    "supertest": "^3.0.0"
   }
 }
