--- a/package.json
+++ b/package.json
@@ -4,30 +4,75 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_PATH=./server node ./bin/www",
+    "start:dev": "NODE_PATH=./server nodemon ./bin/www",
     "ssh:app": "docker exec -it $(docker ps | grep docker_api | awk '{ print $1}') bash",
     "ssh:db": "docker exec -it $(docker ps | grep postgres | awk '{ print $1}') bash",
     "migrations": "sequelize db:migrate:undo:all && sequelize db:migrate",
-    "start:dev": "NODE_PATH=./server nodemon ./bin/www",
+    "start:dev:server": "webpack-dev-server --progress",
+    "build": "webpack -p",
     "coverage": "`npm bin`/istanbul cover server/**/**/**.test.js",
     "test": "NODE_PATH=./server  && node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha ./server/tests/*.js --recursive && cat ./coverage/lcov.info | codecov"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/natalie-elizabeth/doczy.git"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "history": "^4.6.2",
+    "istanbul": "^0.4.5",
+    "jest": "^20.0.4",
+    "jsonwebtoken": "^7.4.1",
+    "marked": "^0.3.6",
+    "material-ui": "^0.18.3",
+    "morgan": "^1.8.2",
+    "node-sass": "^4.5.3",
+    "npm-run-all": "^4.0.2",
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
+    "superagent": "^3.5.2",
+    "superagent-promise": "^1.1.0"
+  },
+  "devDependencies": {
+    "supertest": "^3.0.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "mocha": "^3.4.2",
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
     "codecov": "^2.2.0",
     "coveralls": "^2.13.1",
-    "express": "^4.15.3",
-    "istanbul": "^0.4.5",
-    "jsonwebtoken": "^7.4.1",
-    "mocha": "^3.4.2",
-    "morgan": "^1.8.2",
-    "pg": "^6.1.5",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^3.30.4",
-    "sequelize-cli": "^2.7.0",
-    "supertest": "^3.0.0"
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.0.1",
+    "enzyme": "^2.8.2",
+    "enzyme-to-json": "^1.5.1",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "open": "^0.0.5",
+    "react-scripts": "^1.0.7",
+    "webpack-dev-server": "^2.4.5"
   }
 }
