--- a/package.json
+++ b/package.json
@@ -48,21 +48,18 @@
     "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
-    "supertest": "^3.0.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "mocha": "^3.4.2",
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.24.1",
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
     "codecov": "^2.2.0",
     "coveralls": "^2.13.1",
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.1",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
@@ -71,8 +68,11 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
+    "mocha": "^3.4.2",
     "open": "^0.0.5",
     "react-scripts": "^1.0.7",
-    "webpack-dev-server": "^2.4.5"
+    "supertest": "^3.0.0",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
