--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-scripts": "^1.0.7",
     "supertest": "^3.0.0",
     "webpack-dev-server": "^2.4.5",
+    "webpack-hmr": "^1.0.2",
     "webpack-hot-middleware": "^2.18.0"
   }
 }
