--- a/package.json
+++ b/package.json
@@ -73,12 +73,15 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
+    "expect": "^1.20.2",
     "jest": "^20.0.4",
     "mocha": "^3.4.2",
+    "nock": "^9.0.13",
     "open": "^0.0.5",
     "react-dom": "^15.5.4",
     "react-scripts": "^1.0.7",
     "react-test-renderer": "^15.6.1",
+    "redux-mock-store": "^1.2.3",
     "supertest": "^3.0.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-hmr": "^1.0.2",
