--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:dev:server": "webpack-dev-server --progress",
     "build": "webpack -p",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc --reporter=html --reporter=text mocha ./server/tests/*.js --recursive && cat ./coverage/lcov.info | codecov",
+    "test": "nyc --reporter=html --reporter=text mocha  --recursive -t 10000 && cat ./coverage/lcov.info | codecov",
     "test:jest": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -84,6 +84,8 @@
     "react-scripts": "^1.0.7",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
+    "sinon": "^1.17.5",
+    "sinon-as-promised": "^4.0.3",
     "supertest": "^3.0.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-hmr": "^1.0.2",
