--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "istanbul": "^0.4.5",
     "jest": "^20.0.4",
     "jsonwebtoken": "^7.4.1",
+    "jwt-decode": "^2.2.0",
     "marked": "^0.3.6",
     "material-ui": "^0.18.3",
     "morgan": "^1.8.2",
@@ -43,6 +44,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
