--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^20.0.4",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "material-ui": "^0.18.3",
     "morgan": "^1.8.2",
@@ -52,7 +53,8 @@
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "superagent": "^3.5.2",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "validator": "^7.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
