--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sequelize-cli": "^2.7.0",
     "superagent": "^3.5.2",
     "superagent-promise": "^1.1.0",
+    "toastr": "^2.1.2",
     "validator": "^7.1.0"
   },
   "devDependencies": {
