--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
+    "react-gravatar": "^2.6.3",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
