--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-gravatar": "^2.6.3",
+    "react-js-pagination": "^2.1.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
