--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^20.0.4",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
+    "localstorage": "^0.1.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "material-ui": "^0.18.3",
