--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^15.6.0",
     "react-gravatar": "^2.6.3",
     "react-js-pagination": "^2.1.0",
+    "react-message": "^1.4.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
