--- a/package.json
+++ b/package.json
@@ -68,9 +68,7 @@
     "superagent": "^3.5.2",
     "superagent-promise": "^1.1.0",
     "toastr": "^2.1.2",
-    "validator": "^7.1.0"
-  },
-  "devDependencies": {
+    "validator": "^7.1.0",
     "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
