--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc --reporter=html --reporter=text mocha  --recursive -t 10000 && cat ./coverage/lcov.info | codecov",
     "test:jest": "jest",
-    "postinstall": " npm run build && npm run seed",
-    "test:coverage": "jest --coverage"
+    "postinstall": " npm run build",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "istanbul cover ./node_modules/.bin/_mocha ./e2e",
+    "compose": "cd docker && docker-compose up --build"
   },
   "jest": {
     "testRegex": "./__tests__/.*.jsx?$",
@@ -33,9 +35,32 @@
     "url": "git+https://github.com/natalie-elizabeth/doczy.git"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
+    "chromedriver": "^2.30.1",
+    "codecov": "^2.2.0",
+    "coveralls": "^2.13.1",
+    "cross-env": "^5.0.1",
     "dotenv": "^4.0.0",
+    "enzyme": "^2.9.0",
+    "enzyme-to-json": "^1.5.1",
+    "eslint": "^4.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "expect": "^1.20.2",
     "express": "^4.15.3",
     "history": "^4.6.2",
     "istanbul": "^0.4.5",
@@ -46,67 +71,47 @@
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "material-ui": "^0.18.3",
+    "mocha": "^3.4.2",
     "morgan": "^1.8.2",
+    "nock": "^9.0.13",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
+    "nyc": "^11.0.2",
+    "open": "^0.0.5",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.0",
-    "react-dom": "^15.6.0",
+    "react-dom": "^15.5.4",
     "react-gravatar": "^2.6.3",
     "react-js-pagination": "^2.1.0",
     "react-message": "^1.4.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-scripts": "^1.0.7",
     "react-tap-event-plugin": "^2.0.1",
+    "react-test-renderer": "^15.6.1",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
-    "superagent": "^3.5.2",
-    "superagent-promise": "^1.1.0",
-    "toastr": "^2.1.2",
-    "validator": "^7.1.0",
-    "babel-cli": "^6.24.1",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "chai": "^4.0.2",
-    "chai-http": "^3.0.0",
-    "codecov": "^2.2.0",
-    "coveralls": "^2.13.1",
-    "cross-env": "^5.0.1",
-    "enzyme": "^2.9.0",
-    "enzyme-to-json": "^1.5.1",
-    "eslint": "^4.0.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
-    "expect": "^1.20.2",
-    "jest": "^20.0.4",
-    "mocha": "^3.4.2",
-    "nock": "^9.0.13",
-    "nyc": "^11.0.2",
-    "open": "^0.0.5",
-    "react-dom": "^15.5.4",
-    "react-scripts": "^1.0.7",
-    "react-test-renderer": "^15.6.1",
-    "redux-mock-store": "^1.2.3",
     "sinon": "^1.17.7",
     "sinon-as-promised": "^4.0.3",
+    "superagent": "^3.5.2",
+    "superagent-promise": "^1.1.0",
     "supertest": "^3.0.0",
+    "toastr": "^2.1.2",
+    "validator": "^7.1.0",
+    "webpack": "^2.4.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-hmr": "^1.0.2",
     "webpack-hot-middleware": "^2.18.0"
+  },
+  "devDependencies": {
+    "selenium-webdriver": "^3.5.0"
   }
 }
