--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "sinon": "^1.17.5",
     "sinon-as-promised": "^4.0.3",
     "supertest": "^3.0.0",
-    "webpack-dev-server": "^2.4.5",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-hmr": "^1.0.2",
     "webpack-hot-middleware": "^2.18.0"
   }
